--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,27 @@
   -webkit-appearance: none;
   appearance: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 16px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* border-radius: 100vh; */
+  background: #eee;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #12102a;
+  border-radius: 100vh;
+  border: 3px solid #12102a;
+}
+
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+  background: #034694;
+} */
